--- a/config/config.conf
+++ b/config/config.conf
@@ -1,18 +1,21 @@
 [componentInstances:cComponentManager]
 instance[dataMemory].type=cDataMemory
+printLevelStats=0
 
 ;;; default source
 \{\cm[source{?}:source include config]}
-\{configFile.conf.inc}
+//\{configFile_func.conf.inc}
+\{configFile_lld.conf.inc}
 
 ;;; add components reading from reader.dmLevel=wave
 
 ;;; combine features
 [componentInstances:cComponentManager]
-instance[funcconcat].type=cVectorConcat
+//instance[lldconcat].type = cVectorConcat
+instance[funcconcat].type = cVectorConcat
 
 [funcconcat:cVectorConcat]
-reader.dmLevel = percentilesFunctional
+reader.dmLevel = frames;pitchComponent
 writer.dmLevel = func
 includeSingleElementFields = 1
 
